--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-click==7.1.2
-Flask==1.1.2
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-numpy==1.18.5
+click
+Flask
+gunicorn
+itsdangerous
+Jinja2
+MarkupSafe
+numpy
 opencv-python
-Werkzeug==1.0.1
+Werkzeug
 opencv-contrib-python
 opencv-python-headless
 requests
